--- a/FContrerasAcostaFinal/Debug/makefile
+++ b/FContrerasAcostaFinal/Debug/makefile
@@ -60,8 +60,8 @@ all: main-build
 main-build: FContrerasAcostaFinal.elf secondary-outputs
 
 # Tool invocations
-FContrerasAcostaFinal.elf FContrerasAcostaFinal.map: $(OBJS) $(USER_OBJS) /Users/beanchip42/Downloads/MacOS/SENIOR/FALL\ 2024/EMBEDDED/FContrerasAcostaFinal/STM32F429ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "FContrerasAcostaFinal.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/Users/beanchip42/Downloads/MacOS/SENIOR/FALL 2024/EMBEDDED/FContrerasAcostaFinal/STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="FContrerasAcostaFinal.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+FContrerasAcostaFinal.elf FContrerasAcostaFinal.map: $(OBJS) $(USER_OBJS) /Users/beanchip42/Downloads/MacOS/SENIOR/FALL\ 2024/EMBEDDED/FINAL/FContrerasAcostaFinal/STM32F429ZITX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "FContrerasAcostaFinal.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/Users/beanchip42/Downloads/MacOS/SENIOR/FALL 2024/EMBEDDED/FINAL/FContrerasAcostaFinal/STM32F429ZITX_FLASH.ld" --specs=nosys.specs -Wl,-Map="FContrerasAcostaFinal.map" -Wl,--gc-sections -static -specs=rdimon.specs --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
